 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 alpha 6
=============

 * [cdunde] : Added Quake2 .md2 model file saving functions back to Model Editor.

6.5.0 alpha 5
=============

 * [cdunde] : Added three new Quick Object Makers, Double-cone, Dome and Fan
      - along with full Infobase documentation.

 * [cdunde] : Changed Sphere hollow to extrude to substancialy increase speed
      - and cleaned up code to also try and help with redline drawing speed.

 * [cdunde] : Fixed rulers distance displayed amount from drifting away from
      - marker on screen view x-axis when the scale size is changed.

 * [cdunde] : Fixed smearing of 2D views when rulers are turned off.

 * [cdunde] : Changes by Nazar to the scale, zoom and map sizes that QuArK can handle
     - to allow the creation of much larger maps for the more recent games.

 * [cdunde] : Various updates by Nazar to the Defaults.qrk, DataJA.qrk and DataJK2.qrk
     - files for corrections of entities, their settings and proper path defaults.

 * [cdunde] : Various fixes with Philippe C. to have QuArK more compatible to run
     - on Linux using Wine and eliminating errors while keeping functions operational.

 * [cdunde] : Fixed error message occurring sometimes when switching game modes.

 * [cdunde] : Expanded on textures that can be viewed in Texture Browser for
     - Half-Life2 and Counter Strike and added textures to textures-hl2.qrk file.

 * [cdunde] : Fixed setup and textured viewing in Texture Browser for Half-Life2.
     - Reinstated prefabs-hl2.qrk previous version so they would work again.

 * [cdunde] : Added new 'Hollowing' functions to the Quick Objects Maker dialog boxes.